# vcpkg2

./: LICENSE  README.md  build_osg.cmd  cmd_k.bat  git_pull.bat  make_project_manifestMode.bat  mkPlugins.cmd  setenv.bat  start_dev.bat  vcpkg.bat
custom-ports/: collada_FIX.cmd
custom-ports/fbx-sdk/: portfile.cmake  usage  vcpkg-cmake-wrapper.cmake  vcpkg.json
custom-ports/fbxsdk/: portfile.cmake  vcpkg.json
custom-ports/fox-toolkit/: lib_cmake.patch  libopenjp2.patch  portfile.cmake  vcpkg.json
custom-ports/laszip/: AddInstUnZipper.patch  dllexport.patch  portfile.cmake
custom-ports/libgta/: gtapc.patch  libdir.patch  portfile.cmake
custom-ports/liblas/: BoostLibBeforeTiff.patch  findLaszip3.patch  linkBoost.patch  portfile.cmake  vcpkg.json
custom-ports/libvncserver/: portfile.cmake  vcpkg.json
custom-ports/minitest/: portfile.cmake  vcpkg.json
custom-ports/osg/: FindLzo.patch  collada.patch  colladaStatic.patch  dicom_flags.patch  laurens_portfile.txt  link-libraries.patch  noIlk.patch  openexr4.patch  osgdb_zip_nozip.patch  plugin-pdb-install.patch  portfile.cmake  sdlStatic.patch  unofficial-export.patch  use-boost-asio.patch  vcpkg.json  viewerSDLstatic.patch  vncExtraLibs.patch
custom-ports/osgaudio/: audiobase.patch  example.patch  example_multiple.patch  findosg.patch  portfile.cmake  vcpkg.json
custom-ports/osgplugins/: portfile.cmake  vcpkg.json
custom-ports/osgplugins/osgplugins/: CMakeLists.txt  todo.txt
custom-ports/osgplugins/osgplugins/CMakeModules/: FindFBX.cmake  FindFFmpeg.cmake  FindGLCORE.cmake  FindOpenVR.cmake  FindTuio.cmake  FindZSpace.cmake  OsgMacroUtils.cmake
custom-ports/osgplugins/osgplugins/src/: CMakeLists.txt  NodeMaskUtils.h  revision.h
custom-ports/osgplugins/osgplugins/src/Config/: Config.in
custom-ports/osgplugins/osgplugins/src/CustomNodes/: CMakeLists.txt  FadingLOD.cpp  FadingLOD.h  FadingPagedLOD.cpp  FadingPagedLOD.h  MoveEarthySkyWithEye.cpp  PointStreamGeometry.cpp  PointStreamGeometry.h  RCBumpMapping.cpp  RCBumpMapping.h  StaticLink.cpp  eyeSelectCallback.cpp  osg_ibr.cpp  osg_ibr.h  setVsyncCountCallback.cpp  skydomeCallback.cpp
custom-ports/osgplugins/osgplugins/src/Volume/: GradientTransferFunction.cpp  GradientTransferFunction.h  Property.cpp  Property.h  RayTracedTechnique.cpp  RayTracedTechnique.h  Volume.cpp  Volume.h  VolumeShaderGenerator.cpp  VolumeShaderGenerator.h  VolumeUtils.h
custom-ports/osgplugins/osgplugins/src/ffmpeg/: AudioSink.h  CMakeLists.txt  FFmpegAudioStream.hpp  FFmpegDecoder.cpp  FFmpegDecoder.hpp  FFmpegDecoderAudio.cpp  FFmpegDecoderAudio.hpp  FFmpegDecoderVideo.cpp  FFmpegDecoderVideo.hpp  FFmpegHeaders.hpp  FFmpegImageStream.cpp  FFmpegImageStream.hpp  FFmpegPacket.hpp  ReaderWriterFFmpeg.cpp
custom-ports/osgplugins/osgplugins/src/plugins/: CMakeLists.txt
custom-ports/osgplugins/osgplugins/src/plugins/Inventor/: CMakeLists.txt  xCMakeLists.txt
custom-ports/osgplugins/osgplugins/src/plugins/brotli/: BrotliCompressor.cpp  CMakeLists.txt
custom-ports/osgplugins/osgplugins/src/plugins/las/: CMakeLists.txt  ReaderWriterLAS.cpp
custom-ports/osgplugins/osgplugins/tools/: CMakeLists.txt
custom-ports/osgplugins/osgplugins/tools/mkthumb/: CMakeLists.txt  mkthumb.cpp
custom-ports/osgplugins/osgplugins/tools/osgconvEx/: CMakeLists.txt  osgconvEx.cpp
custom-ports/osgrc/: portfile.cmake  vcpkg.json
custom-ports/vnc/: vcpkg.json
custom-triplets/: x64-windows-mixed.cmake
project/: vcpkg.json
