file(GLOB LIST_PUGINS LIST_DIRECTORIES true RELATIVE ${CMAKE_CURRENT_LIST_DIR}  "./*/")

#coin-config.cmake 112: 		find_dependency(Boost MODULE)
#liblas-depends: ~70: set_target_properties(liblas PROPERTIES INTERFACE_LINK_LIBRARIES "Boost::iostreams;Boost::program_options;Boost::serialization;Boost::thread")

#find_package(Boost REQUIRED COMPONENTS iostreams program_options serialization thread)

FOREACH( mylibfolder ${LIST_PUGINS})
  MESSAGE(LIST_PUGINS ${CMAKE_CURRENT_LIST_DIR}/${mylibfolder})
  if(IS_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/${mylibfolder})
    if(${mylibfolder} STREQUAL "Inventor")
	  MESSAGE("cmake_policy(SET CMP0167 NEW)")
	  cmake_policy(SET CMP0167 NEW)
	  
      IF(NOT OSG_GLES1_AVAILABLE AND NOT OSG_GLES2_AVAILABLE)
#       FIND_PACKAGE(Inventor)
        IF(INVENTOR_FOUND)
          MESSAGE("InventorPlugin INVENTOR_FOUND")
          ADD_SUBDIRECTORY(${mylibfolder})
#          ADD_PLUGIN_DIRECTORY(Inventor)
        ELSE()
          FIND_PACKAGE(Coin)
          IF(Coin_FOUND)
            MESSAGE("InventorPlugin COIN_FOUND")
            MESSAGE("Coin_INCLUDE_DIR ${Coin_INCLUDE_DIR}")
            MESSAGE("Coin_LIB_DIR ${Coin_LIB_DIR}")
            MESSAGE("Coin_LIBRARY ${Coin_LIBRARY}")
            MESSAGE("Coin_LIBRARIES ${Coin_LIBRARIES}")
            MESSAGE("Coin_LIBRARY_RELEASE ${Coin_LIBRARY_RELEASE}")
            MESSAGE("Coin_LIBRARY_DEBUG ${Coin_LIBRARY_DEBUG}")
		   #SET(CACHE INVENTOR_INCLUDE_DIR PATH FORCE VALUE ${Coin_INCLUDE_DIR})
           #SET(CACHE INVENTOR_LIBRARY FILEPATH FORCE VALUE ${Coin_LIBRARY})
           #SET(CACHE INVENTOR_LIBRARY_RELEASE FILEPATH FORCE VALUE ${Coin_LIB_DIR}/${Coin_LIBRARY_RELEASE})
           #SET(CACHE INVENTOR_LIBRARY_DEBUG FILEPATH FORCE VALUE ${Coin_LIB_DIR}/../debug/lib/${Coin_LIBRARY_DEBUG})
		   #set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build." FORCE)
		   #set(<variable> <value>... CACHE <type> <docstring> [FORCE])
		   SET(INVENTOR_INCLUDE_DIR ${Coin_INCLUDE_DIR} CACHE PATH "INLCUDEPATH" FORCE)
           SET(INVENTOR_LIBRARY ${Coin_LIBRARY} CACHE FILEPATH "LIB_FILE_PATH" FORCE)
           SET(INVENTOR_LIBRARY_RELEASE ${Coin_LIB_DIR}/${Coin_LIBRARY_RELEASE}.lib CACHE FILEPATH "REL LIB_FILE_PATH" FORCE)
           SET(INVENTOR_LIBRARY_DEBUG ${Coin_LIB_DIR}/../debug/lib/${Coin_LIBRARY_DEBUG}d.lib CACHE FILEPATH "DBG LIB_FILE_PATH" FORCE)
		   
		   MESSAGE("INVENTOR_INCLUDE_DIR ${INVENTOR_INCLUDE_DIR}")
		   MESSAGE("INVENTOR_LIBRARY ${INVENTOR_LIBRARY}")
		   MESSAGE("INVENTOR_LIBRARY_RELEASE ${INVENTOR_LIBRARY_RELEASE}")
		   MESSAGE("INVENTOR_LIBRARY_DEBUG ${INVENTOR_LIBRARY_DEBUG}")
            ADD_SUBDIRECTORY(${mylibfolder})
          ELSE()
            MESSAGE("InventorPlugin libs NOT FOUND")
          ENDIF()
        ENDIF()
      ELSE()
	    MESSAGE("InventorPlugin libs NOT gles compatible")
      ENDIF()
    elseif(${mylibfolder} STREQUAL "osgPlugin")
      MESSAGE("ignore osgPlugin folder")
	elseif(${mylibfolder} STREQUAL "las")
	  find_package(libLAS CONFIG REQUIRED)
	  IF(LIBLAS_FOUND)
         ADD_SUBDIRECTORY(las)
      ENDIF()
    else()
      MESSAGE("ADD ${mylibfolder}")
	  ADD_SUBDIRECTORY(${mylibfolder})
    endif()
  endif(IS_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/${mylibfolder})
ENDFOREACH( mylibfolder )
