SET(TARGET_DEFAULT_PREFIX "osgdb_")
set(DYNAMIC_OPENSCENEGRAPH 1)

string(TOUPPER "${CMAKE_BUILD_TYPE}" CMAKE_BUILD_TYPE_UPPER)
cmake_path(GET OSG_LIBRARY_${CMAKE_BUILD_TYPE_UPPER} PARENT_PATH CURRENT_LIB_DIR)
link_directories(${CURRENT_LIB_DIR})

SET(TARGET_COMMON_LIBRARIES
    OpenThreads
    osg
    osgDB
    osgUtil
)


MACRO(GET_IMPORT_LIB OUT_VAR TRGTNAME CFG)
	get_target_property(${OUT_VAR} ${TRGTNAME} IMPORTED_IMPLIB_${CFG})
	IF(NOT ${OUT_VAR})
		get_target_property(${OUT_VAR} ${TRGTNAME} IMPORTED_LOCATION_${CFG})
	ENDIF(NOT ${OUT_VAR})
ENDMACRO(GET_IMPORT_LIB OUT_VAR TRGTNAME CFG)

file(GLOB LIST_PUGINS LIST_DIRECTORIES true RELATIVE ${CMAKE_CURRENT_LIST_DIR}  "./*/")
FOREACH( mylibfolder ${LIST_PUGINS})
  MESSAGE(LIST_PUGINS ${CMAKE_CURRENT_LIST_DIR}/${mylibfolder})
  if(IS_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/${mylibfolder})
    if(${mylibfolder} STREQUAL "Inventor")
	  MESSAGE("cmake_policy(SET CMP0167 NEW)")
	  cmake_policy(SET CMP0167 NEW)
	  
      IF(NOT OSG_GLES1_AVAILABLE AND NOT OSG_GLES2_AVAILABLE)
#       FIND_PACKAGE(Inventor)
        IF(INVENTOR_FOUND)
          MESSAGE("InventorPlugin INVENTOR_FOUND")
          ADD_SUBDIRECTORY(${mylibfolder})
#          ADD_PLUGIN_DIRECTORY(Inventor)
        ELSE()
          FIND_PACKAGE(Coin)
          IF(Coin_FOUND)
            MESSAGE("InventorPlugin COIN_FOUND")
            MESSAGE("Coin_INCLUDE_DIR ${Coin_INCLUDE_DIR}")
            MESSAGE("Coin_LIB_DIR ${Coin_LIB_DIR}")
            MESSAGE("Coin_LIBRARY ${Coin_LIBRARY}")
            MESSAGE("Coin_LIBRARIES ${Coin_LIBRARIES}")
            MESSAGE("Coin_LIBRARY_RELEASE ${Coin_LIBRARY_RELEASE}")
            MESSAGE("Coin_LIBRARY_DEBUG ${Coin_LIBRARY_DEBUG}")
		   #SET(CACHE INVENTOR_INCLUDE_DIR PATH FORCE VALUE ${Coin_INCLUDE_DIR})
           #SET(CACHE INVENTOR_LIBRARY FILEPATH FORCE VALUE ${Coin_LIBRARY})
           #SET(CACHE INVENTOR_LIBRARY_RELEASE FILEPATH FORCE VALUE ${Coin_LIB_DIR}/${Coin_LIBRARY_RELEASE})
           #SET(CACHE INVENTOR_LIBRARY_DEBUG FILEPATH FORCE VALUE ${Coin_LIB_DIR}/../debug/lib/${Coin_LIBRARY_DEBUG})
		   #set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build." FORCE)
		   #set(<variable> <value>... CACHE <type> <docstring> [FORCE])
		   SET(INVENTOR_INCLUDE_DIR ${Coin_INCLUDE_DIR} CACHE PATH "INLCUDEPATH" FORCE)
           SET(INVENTOR_LIBRARY ${Coin_LIBRARY} CACHE FILEPATH "LIB_FILE_PATH" FORCE)
           SET(INVENTOR_LIBRARY_RELEASE ${Coin_LIB_DIR}/${Coin_LIBRARY_RELEASE}.lib CACHE FILEPATH "REL LIB_FILE_PATH" FORCE)
           SET(INVENTOR_LIBRARY_DEBUG ${Coin_LIB_DIR}/../debug/lib/${Coin_LIBRARY_DEBUG}d.lib CACHE FILEPATH "DBG LIB_FILE_PATH" FORCE)
		   
		   MESSAGE("INVENTOR_INCLUDE_DIR ${INVENTOR_INCLUDE_DIR}")
		   MESSAGE("INVENTOR_LIBRARY ${INVENTOR_LIBRARY}")
		   MESSAGE("INVENTOR_LIBRARY_RELEASE ${INVENTOR_LIBRARY_RELEASE}")
		   MESSAGE("INVENTOR_LIBRARY_DEBUG ${INVENTOR_LIBRARY_DEBUG}")
            ADD_SUBDIRECTORY(${mylibfolder})
          ELSE()
            MESSAGE("InventorPlugin libs NOT FOUND")
          ENDIF()
        ENDIF()
      ELSE()
	    MESSAGE("InventorPlugin libs NOT gles compatible")
      ENDIF()
    elseif(${mylibfolder} STREQUAL "osgPlugin")
      MESSAGE("ignore osgPlugin folder")
	elseif(${mylibfolder} STREQUAL "las")
	  find_package(libLAS CONFIG REQUIRED)
	  IF(LIBLAS_FOUND)
         ADD_SUBDIRECTORY(las)
      ENDIF()
	elseif(${mylibfolder} STREQUAL "fbx")
	  find_package(FBX REQUIRED)
	  IF(FBX_FOUND)
         ADD_SUBDIRECTORY(${mylibfolder})
	  ELSE()
	    MESSAGE("SKIP FBX, FBX_FOUND=${FBX_FOUND}")
      ENDIF()
	elseif(${mylibfolder} STREQUAL "brotli")
      find_package(unofficial-brotli CONFIG REQUIRED)
	  
      GET_IMPORT_LIB(BC unofficial::brotli::brotlicommon RELEASE)
      GET_IMPORT_LIB(BE unofficial::brotli::brotlienc RELEASE)
      GET_IMPORT_LIB(BD unofficial::brotli::brotlidec RELEASE)
      GET_IMPORT_LIB(BC_DEBUG unofficial::brotli::brotlicommon DEBUG)
      GET_IMPORT_LIB(BE_DEBUG unofficial::brotli::brotlienc DEBUG)
      GET_IMPORT_LIB(BD_DEBUG unofficial::brotli::brotlidec DEBUG)
	  #set(BROTLI_LIBRARIES "${BC}")
	  #set(BROTLI_LIBRARIES_DEBUG "${BC_DEBUG}")
	  SET(TARGET_LIBRARIES_VARS2 "BC" "BE" "BD")
      ADD_SUBDIRECTORY(${mylibfolder})
    else()
      MESSAGE("ADD ${mylibfolder}")
	  ADD_SUBDIRECTORY(${mylibfolder})
    endif()
  endif(IS_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/${mylibfolder})
ENDFOREACH( mylibfolder )
