set(TARGET_NAME las)
set(DYNAMIC_OPENSCENEGRAPH 1)

INCLUDE_DIRECTORIES(${LIBLAS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

SET(TARGET_SRC ReaderWriterLAS.cpp )

SET(TARGET_LIBRARIES_VARS LIBLAS_LIBRARY LIBLASC_LIBRARY)

#### end var setup  ###
SETUP_PLUGIN(${TARGET_NAME})


target_link_libraries(${TARGET_TARGETNAME} ${OPENSCENEGRAPH_LIBRARIES} ${libLAS_LIBRARY})

link_directories(${libLAS_LIBRARY_DIRS})
MESSAGE("libLAS_LIBRARIES ${libLAS_LIBRARIES}")
target_link_libraries(${TARGET_TARGETNAME} ${libLAS_LIBRARIES})